# memory-machines

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/skills/memory-machine/: ANKI_EXPORT.md  PIPELINE.md  SKILL.md
memory_machines/arena/: elo.py  generate.py  judge_error.py  parse.py  test_elo.py  test_parse.py  viz_results.py
memory_machines/arena/instruction/: simple.txt  trivia.txt
memory_machines/forced_choice/: analyze.py  choose_most_preferred.py  viz_bar_chart.py
memory_machines/forced_choice/instructions/: few_shot.txt  few_shot_sources.json  simple.txt
memory_machines/highlight/: build_dataset.py
memory_machines/pluckability/: analyze.py  classify.py  viz_bar_chart.py  viz_tier_breakdown.py
memory_machines/pluckability/instructions/: few_shot.txt  zero_shot.txt
memory_machines/probes/: _probes.py  analyze.py  classify.py
memory_machines/probes/instructions/: ambiguous_lacks_context.txt  ambiguous_solicits_multiple_responses.txt  narrow.txt  shallow.txt  wordy.txt
memory_machines/tiering/: classify.py  eval_masked_task_tiering.py  eval_pass_n.py  viz_confusion_matrices.py  viz_pass_n.py  viz_pluckability.py
memory_machines/tiering/instructions/: rate_grounded.txt  rate_ungrounded.txt
memory_machines/training/classifier/: prepare_dataset.py  push.py  sweep.yaml  (+3 more)
memory_machines/utils/: format.py  judge.py  tiers.py  types.py
scripts/: compare_classifiers.sh  evaluate_forced_choice.sh  evaluate_masked_tiering.sh  evaluate_pass_n.sh  evaluate_pluckability.sh  evaluate_probes.sh  generate_arena.sh  train_classifier_backbones.sh
(+16 files in other folders)
